kubernetes/apps/devops/version-control/forgejo/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ssh.forgejo.${DOMAIN1}
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo
          port: 22
